@@ -12,7 +12,7 @@
 #
 bin_PROGRAMS= gtags
 
-INCLUDES = @INCLUDES@
+AM_CPPFLAGS = @AM_CPPFLAGS@
 
 LDADD = @LDADD@
 
